changed emacs binding
I changed the emacs binding because it was a duplicate binding because I did not think to check.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -44,7 +44,7 @@ bindsym $mod+x exec firefox
 bindsym $mod+c exec nautilus
 
 # start emacs
-bindsym $mod+e exec emacs
+bindsym $mod+t exec emacs
 
 # kill focused window
 bindsym $mod+Shift+q kill
